# MITIM-fusion

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
config/: config_user_example.json  mitim.bashrc
config/machines_sources/: aliases.bashrc  eofe.bashrc  iris.bashrc  mfews.bashrc  mfews_pretransp.bashrc  nersc.bashrc  slurm_aliases.bashrc  toki.bashrc
docs/: LICENSE  api.rst  conf.py  faq.rst  index.rst  installation.rst  pyproject.toml  requirements.txt
docs/_static/css/: custom.css
docs/_static/js/: open_links_in_new_tab.js
docs/_templates/: custom_sidebar.html
docs/capabilities/: freegsu_capabilities.rst  misc_capabilities.rst  optimization.rst  portals_capabilities.rst  shell_scripts.rst  standalone.rst  tglf_capabilities.rst  tgyro_capabilities.rst  transp_capabilities.rst  vitals_capabilities.rst
docs/capabilities/notebooks/: tglf.ipynb
regressions/: portals_regressions.py
regressions/data/: input.gacode
src/mitim_modules/: __init__.py
src/mitim_modules/freegsu/: FREEGSUmain.py  FREEGSUtools.py
src/mitim_modules/freegsu/exe/: readGS_combine.py  readGS_pickled.py
src/mitim_modules/freegsu/scripts/: readGS_combine.py  readGS_pickled.py
src/mitim_modules/freegsu/utils/: FREEGSUparams.py  FREEGSUplotting.py
src/mitim_modules/maestro/: MAESTROmain.py
src/mitim_modules/maestro/scripts/: check_maestro.py  plot_maestro.py  run_maestro.py
src/mitim_modules/maestro/tmp_tests/: maestro_test1.py
src/mitim_modules/maestro/utils/: EPEDbeat.py  LENGYELbeat.py  MAESTRObeat.py  MAESTROhelper.py  MAESTROplot.py  PORTALSbeat.py  TRANSPbeat.py
src/mitim_modules/mitim_step/: main.py
src/mitim_modules/portals/: PORTALSmain.py  PORTALStools.py
src/mitim_modules/portals/aux/: PORTALSanalysis.py  PORTALScgyro.py  PORTALSinit.py  PORTALSoptimization.py  PORTALSplot.py  PORTALSpostproduction.py
src/mitim_modules/portals/exe/: check_initialization.py  compareBest.py  comparePORTALS.py  readMetrics.py  runTGLF.py  runTGLFdrivesfromPORTALS.py  runTGLFscanfromPORTALS.py  runTGYRO.py  runTGYROfromPORTALS.py
src/mitim_modules/portals/scripts/: read_portals.py  runTGLF.py  runTGLFdrivesfromPORTALS.py  runTGYRO.py  run_portals.py  run_tglf_todebug_portals.py
src/mitim_modules/portals/utils/: PORTALSanalysis.py  PORTALScgyro.py  PORTALSinit.py  PORTALSoptimization.py  PORTALSplot.py
src/mitim_modules/powertorch/: STATEtools.py
src/mitim_modules/powertorch/aux/: ITtools.py  PARAMtools.py  POWERplot.py  TRANSFORMtools.py
src/mitim_modules/powertorch/exe/: calculateTargets.py  compareRadialResolution.py  compareWithTGYRO.py
src/mitim_modules/powertorch/iteration/: ITtools.py
src/mitim_modules/powertorch/physics/: CALCtools.py  GEOMETRYtools.py  TARGETStools.py  TRANSPORTtools.py  radiation_chebyshev.csv
src/mitim_modules/powertorch/physics_models/: parameterizers.py  targets_analytic.py  transport_analytic.py  transport_cgyro.py  transport_cgyroneo.py  transport_gacode.py  transport_gx.py  transport_neo.py  transport_tglf.py  transport_tglfneo.py  transport_tgyro.py
src/mitim_modules/powertorch/scripts/: calculateTargets.py  compareRadialResolution.py  compareWithTGYRO.py
src/mitim_modules/powertorch/utils/: CALCtools.py  GEOMETRYtools.py  ITtools.py  POWERplot.py  TARGETStools.py  TRANSFORMtools.py  TRANSPORTtools.py
src/mitim_modules/scenarios/: SCENARIOSmain.py
src/mitim_modules/scenarios/routines/: readBO.py  runPORTALS_BO.py
src/mitim_modules/vitals/: VITALSmain.py
src/mitim_tools/: __init__.py
src/mitim_tools/astra_tools/: ASTRA_CDFtools.py  ASTRAtools.py  NE_ASTRA  TI_ASTRA  convertGACODE.py  testChiPert_ASTRA.py
src/mitim_tools/eped_tools/: EPEDtools.py
src/mitim_tools/experiment_tools/: AUGtools.py  CMODtools.py  DIIIDtools.py  SPARCtools.py
src/mitim_tools/gacode_tools/: CGYROtools.py  NEOtools.py  PROFILEStools.py  TGLFtools.py  TGYROtools.py
src/mitim_tools/gs_tools/: FREEGStools.py  GEQtools.py  test.py
src/mitim_tools/gyrokinetics_tools/: GXtools.py
src/mitim_tools/im_tools/: IMparam.py  IMtools.py
src/mitim_tools/misc_tools/: CONFIGread.py  FARMINGtools.py  GRAPHICStools.py  GUItools.py  IOtools.py  LOGtools.py  MATHtools.py  MLtools.py  PLASMAtools.py
src/mitim_tools/opt_tools/: BOTORCHtools.py  OPTtools.py  STEPtools.py  STRATEGYtools.py  SURROGATEtools.py
src/mitim_tools/plasmastate_tools/: MITIMstate.py
src/mitim_tools/popcon_tools/: FunctionalForms.py  POPCONtools.py  POPOPtools.py  PedestalAssessor.py  RAPIDStools.py
src/mitim_tools/simulation_tools/: SIMtools.py
src/mitim_tools/surrogate_tools/: EPED-NN-MODEL-ARC.h5  EPED-NN-NORMALIZATION.txt  NNtools.py
src/mitim_tools/transp_tools/: CDFtools.py  NMLtools.py  TRANSPtools.py  UFILEStools.py
src/mitim_tools/transport_tools/: TRtools.py
templates/: config_user_example.json  im.namelist  input.cgyro.controls  input.cgyro.models.json  input.cgyro.models.yaml  input.gx.controls  input.gx.models.json  input.gx.models.yaml  input.lengyel.controls.yaml  input.neo.controls  input.neo.models.json  input.neo.models.yaml  input.tglf.controls  input.tglf.models.json  input.tglf.models.yaml  maestro_namelist.json  main.namelist  main.namelist.json  namelist.maestro.yaml  namelist.optimization.yaml  namelist.portals.yaml  portals.namelist.yaml
tests/: ASTRA_workflow.py  CGYRO_workflow.py  EPEDNN_opt.py  EPED_workflow.py  FREEGSU_workflow.py  FREEGS_workflow.py  GX_workflow.py  IM_workflow.py  LENGYEL_workflow.py  MAESTRO_workflow.py  MAESTRO_workflow_new.py  NEO_workflow.py  OPT_workflow.py  PORTALS_workflow.py  POWERTORCH_workflow.py  TGLF_workflow.py  TGLFfull_workflow.py  TGLFscan_workflow.py  TGYRO_workflow.py  TRANSP_workflow.py  VITALS_workflow.py
tests/data/: input.tglf
tests/data/FolderTRANSP/: MIT12345.GFD  MIT12345.LIM  MIT12345.MRY  MIT12345.RFP  MIT12345.SAW  MIT12345.TEL  MIT12345.TI2  MIT12345.VP2  MIT12345.VSF  PRF12345.CUR  PRF12345.NEL  PRF12345.RBZ  PRF12345.ZF2
tutorials/: EPEDNNscans.py  PORTALS_tutorial.py  TGLF_tutorial.py
tutorials/run_slurm_array_tutorial/: test_launcher.py  test_script.py
(+149 files in other folders)
